--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 .header-content {
     /* max-width: 1280px; */
     max-width: 1300px;
+    min-width: 900px;
     width: 65%;
     margin: auto;
 }
